CHANGES
*******

3.9.3 (unreleased)
==================

- No changes yet.

3.9.2 (2010-01-22)
==================

- Fixed a bug introduced by recent refactoring, where passing
  CheckerPublic to securityAdapterFactory wrongly wrapped the factory
  into a LocatingUntrustedAdapterFactory.

3.9.1 (2010-01-21)
==================

- The tested testrunner somehow gets influenced by options of the outer
  testrunner, such a the -v option. We modified the tests so that it avoids
  this.

3.9.0 (2010-01-21)
==================

- Add testlayer support. It is now possible to load a ZCML file within
  tests more easily. See zope.component.testlayer.py and
  zope.component.testlayer.txt.

3.8.0 (2009-11-16)
==================

- Removed the dependencies on zope.proxy and zope.security from the zcml extra:
  zope.component does not hard depend on them anymore; the support for security
  proxied components ZCML registrations is enabled only if zope.security and
  zope.proxy are available.

- Moved the IPossibleSite and ISite interfaces here from zope.location as they
  are dealing with zope.component's concept of a site, but not with location.

- Moved the zope.site.hooks functionality to zope.component.hooks as it isn't
  actually dealing with zope.site's concept of a site.

3.7.1 (2009-07-24)
==================

- Fixed a problem, where ``queryNextUtility`` could fail if the context could
  not be adapted to a ``IComponentLookup``.

- Fixed 2 related bugs:

  When a utility is registered and there was previously a utility
  registered for the same interface and name, then the old utility is
  unregistered.  The 2 bugs related to this:

  - There was no ``Unregistered`` for the implicit unregistration. Now
    there is.

  - The old utility was still held and returned by
    getAllUtilitiesRegisteredFor.  In other words, it was still
    considered registered, eeven though it wasn't.  A particularly
    negative consequence of this is that the utility is held in memory